--- a/main.html
+++ b/main.html
@@ -9,6 +9,24 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
+		<table>
+  <thead>
+    <tr>
+      <th>Column 1 Heading</th>
+      <th>Column 2 Heading</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Row 1 Data 1</td>
+      <td>Row 1 Data 2</td>
+    </tr>
+    <tr>
+      <td>Row 2 Data 1</td>
+      <td>Row 2 Data 2</td>
+    </tr>
+  </tbody>
+</table>
 </script>
 
 </body>
